Pipeline/javax_swing_plaf/javax_swing_plafOutputResult.txt
Sample: ComponentUI_3
----------------------------------------------------------------
================================================================

Sample: LayerUI_1
----------------------------------------------------------------
output:
./javax_swing_plaf/javaFiles/LayerUI_1.java:28: error: no suitable method found for setUI(LayerUI<JComponent>)
        panel.setUI(layerUI);
             ^
    method JComponent.setUI(ComponentUI) is not applicable
      (setUI(ComponentUI) has protected access in JComponent)
    method JPanel.setUI(PanelUI) is not applicable
      (argument mismatch; LayerUI<JComponent> cannot be converted to PanelUI)
1 error


================================================================

Sample: LayerUI_2
----------------------------------------------------------------
output:
./javax_swing_plaf/javaFiles/LayerUI_2.java:9: error: cannot find symbol
                installUI(this);
                ^
  symbol: method installUI(<anonymous JComponent>)
1 error


================================================================

Sample: LayerUI_3
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.ClassCastException: class LayerUI_3$1 cannot be cast to class javax.swing.JLayer (LayerUI_3$1 is in unnamed module of loader com.sun.tools.javac.launcher.Main$MemoryClassLoader @7ee955a8; javax.swing.JLayer is in module java.desktop of loader 'bootstrap')
	at java.desktop/javax.swing.plaf.LayerUI.installUI(LayerUI.java:462)
	at java.desktop/javax.swing.JComponent.setUI(JComponent.java:730)
	at LayerUI_3$1.updateUI(LayerUI_3.java:17)
	at LayerUI_3.main(LayerUI_3.java:20)

================================================================

